test/tests/stages/18_structures/valid/params_and_returns/libraries/missing_retval.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: big
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: arr
            Array: 
              TLong: 25
              Char: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: missing_return_value
        List[1]: 
          TIdentifier: i
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Int: 
          Structure: 
            TIdentifier: big
            Bool: 0
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: missing_return_value
        List[1]: 
          TIdentifier: i
        CB: 
          List[1]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDereference: 
                    CVar: 
                      TIdentifier: i
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Int: 
          Structure: 
            TIdentifier: big
            Bool: 0
        None: 
