test/tests/stages/18_structures/invalid_types/extra_credit/union_tag_resolution/conflicting_param_union_types.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[0]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[1]: 
          TIdentifier: x
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Structure: 
              TIdentifier: s
              Bool: 0
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: s
                  Bool: 1
                  List[0]: 
            CD: 
              CFunDecl: 
                CFunctionDeclaration: 
                  TIdentifier: foo
                  List[1]: 
                    TIdentifier: x
                  None: 
                  FunType: 
                    TULong: 67108864
                    TULong: 67108864
                    List[1]: 
                      Structure: 
                        TIdentifier: s
                        Bool: 1
                    Int: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
